Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidStruct.ru
/? id de struct invalido, salida: id invalido
FailClass2